removing oversized div to fix x-overflow on mobile

--- a/src/components/about/about.module.css
+++ b/src/components/about/about.module.css
@@ -29,5 +29,22 @@
 }
 
 .circle {
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
   box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.6);
+  background-color: #0a0a0a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 800px) {
+  .circle {
+    width: auto;
+    height: auto;
+    border-radius: 0;
+    box-shadow: none;
+    background-color: transparent;
+  }
 }
